[gd_scene load_steps=24 format=3 uid="uid://3xa1eini6b4h"]

[ext_resource type="Script" path="res://scenes/insidemaze.gd" id="1_nwe1m"]
[ext_resource type="PackedScene" uid="uid://3kidvivnys7h" path="res://scenes/player.tscn" id="1_r2o36"]
[ext_resource type="Texture2D" uid="uid://6ghgcsfi5mwd" path="res://maze.jpg" id="2_dykda"]
[ext_resource type="Theme" uid="uid://babdwm0flbrd6" path="res://ScoreSize.tres" id="2_uwxvg"]
[ext_resource type="Texture2D" uid="uid://bmxadfct0tyws" path="res://heart emoji.png" id="3_y7uul"]
[ext_resource type="Script" path="res://scripts/quiz_ui.gd" id="5_52w6v"]
[ext_resource type="Script" path="res://scenes/maze_quiz.gd" id="5_neox7"]
[ext_resource type="StyleBox" uid="uid://b57oijho8rmej" path="res://normal_button_quiz.tres" id="6_v0ekv"]
[ext_resource type="StyleBox" uid="uid://buit2etobpl21" path="res://CorrectAnswerStyle.tres" id="7_37bjb"]
[ext_resource type="StyleBox" uid="uid://bph3hfo4lpnd" path="res://WrongAnswerStyle.tres" id="8_decti"]
[ext_resource type="StyleBox" uid="uid://dusrylw1u8v50" path="res://quiz_colours.tres" id="9_4guar"]
[ext_resource type="Theme" uid="uid://dvcwjkyhd571w" path="res://fontsize.tres" id="10_wqj76"]
[ext_resource type="Script" path="res://scenes/maze_exit.gd" id="12_wr3jp"]
[ext_resource type="Script" path="res://scenes/maze_dialogue_trigger.gd" id="13_0iscn"]
[ext_resource type="Texture2D" uid="uid://dbmaxxkloa48e" path="res://maze_exit.png" id="13_nq7sb"]
[ext_resource type="Script" path="res://scenes/maze_dialogue_trigger_2.gd" id="14_guui5"]
[ext_resource type="AudioStream" uid="uid://dywpurtmjmnhh" path="res://audio_maze_1.mp3" id="14_hhu13"]
[ext_resource type="AudioStream" uid="uid://btnaes6auks0h" path="res://audio_maze_2.mp3" id="16_pykaa"]
[ext_resource type="AudioStream" uid="uid://on4ie0f37xay" path="res://audio_maze_4.mp3" id="17_mah1k"]
[ext_resource type="AudioStream" uid="uid://bbkd3y6a5ds17" path="res://audio_maze_3.mp3" id="19_gu3kg"]
[ext_resource type="Texture2D" uid="uid://bbx3wk64bkowt" path="res://maze_quiz_sprite.png" id="21_bukrh"]

[sub_resource type="Theme" id="Theme_3fje1"]
default_font_size = 35

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jqe11"]
size = Vector2(29.3203, 32)

[node name="Insidemazze" type="Node2D"]
y_sort_enabled = true
script = ExtResource("1_nwe1m")

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = -2076.0
offset_top = -713.0
offset_right = 6308.0
offset_bottom = 2987.0
color = Color(0.541176, 0.486275, 0.352941, 1)

[node name="TextureRect" type="TextureRect" parent="ColorRect"]
layout_mode = 0
offset_left = 2076.0
offset_top = 713.0
offset_right = 5914.0
offset_bottom = 2806.0
texture = ExtResource("2_dykda")
stretch_mode = 4

[node name="CharacterBody2D" parent="." instance=ExtResource("1_r2o36")]
position = Vector2(1932, 2031)

[node name="LabelAnchor" type="Node2D" parent="CharacterBody2D"]

[node name="RemoteTransform2D" type="RemoteTransform2D" parent="CharacterBody2D/LabelAnchor"]
remote_path = NodePath("../../../World UI/UI position")
update_rotation = false
update_scale = false

[node name="World UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 3633.0
offset_top = 2132.0
offset_right = 3749.0
offset_bottom = 2172.0

[node name="UI position" type="Node2D" parent="World UI"]
position = Vector2(-1701, -101)

[node name="Panel" type="Panel" parent="World UI/UI position"]
offset_left = 739.0
offset_top = -533.0
offset_right = 959.0
offset_bottom = -302.0
theme_override_styles/panel = ExtResource("9_4guar")

[node name="Score" type="Label" parent="World UI/UI position/Panel" groups=["ScoreBox"]]
layout_mode = 0
offset_left = 29.0
offset_top = 37.0
offset_right = 190.0
offset_bottom = 117.0
theme = ExtResource("2_uwxvg")
theme_override_colors/font_color = Color(0, 0, 0, 1)
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="Lives" type="Label" parent="World UI/UI position/Panel" groups=["LivesBox"]]
layout_mode = 0
offset_left = 71.5
offset_top = 125.0
offset_right = 183.5
offset_bottom = 193.0
theme = ExtResource("2_uwxvg")
theme_override_colors/font_color = Color(0, 0, 0, 1)
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="Heart emoji" type="Sprite2D" parent="World UI/UI position/Panel" groups=["HeartEmoji"]]
position = Vector2(72.5, 162)
texture = ExtResource("3_y7uul")

[node name="Panel2" type="Panel" parent="World UI/UI position" groups=["PanelBox"]]
visible = false
offset_left = -944.0
offset_top = 382.0
offset_right = 941.0
offset_bottom = 527.0
theme_override_styles/panel = ExtResource("9_4guar")

[node name="Label" type="Label" parent="World UI/UI position/Panel2" groups=["DialogueBox"]]
layout_mode = 1
anchors_preset = -1
anchor_left = -0.00265252
anchor_top = -0.0344828
anchor_right = -0.00265252
anchor_bottom = 0.124138
offset_left = 37.0
offset_top = 36.0
offset_right = 1858.0
offset_bottom = 96.0
theme = SubResource("Theme_3fje1")
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 25
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2
metadata/_edit_use_anchors_ = true

[node name="QuizUI" type="Control" parent="."]
process_mode = 3
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_top = -1500.0
offset_right = 19.0
offset_bottom = -1480.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("5_52w6v")
default_style = ExtResource("6_v0ekv")
correct_style = ExtResource("7_37bjb")
wrong_style = ExtResource("8_decti")

[node name="ColorRect" type="ColorRect" parent="QuizUI"]
layout_mode = 0
offset_left = -1000.0
offset_top = -554.0
offset_right = 1000.0
offset_bottom = 546.0

[node name="Panel" type="Panel" parent="QuizUI"]
layout_mode = 0
offset_left = -623.0
offset_top = -400.0
offset_right = 577.0
offset_bottom = 400.0
theme_override_styles/panel = ExtResource("9_4guar")

[node name="Label" type="Label" parent="QuizUI/Panel"]
layout_mode = 0
offset_left = 58.0
offset_top = 118.0
offset_right = 1150.0
offset_bottom = 359.0
theme = ExtResource("10_wqj76")
theme_override_colors/font_color = Color(0, 0, 0, 1)
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="Button" type="Button" parent="QuizUI/Panel"]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.015
anchor_bottom = 0.029
offset_left = 70.0
offset_top = 412.0
offset_right = 526.0
offset_bottom = 534.8
theme = ExtResource("10_wqj76")
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
text = "A"

[node name="Button2" type="Button" parent="QuizUI/Panel"]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.015
anchor_bottom = 0.029
offset_left = 660.0
offset_top = 412.0
offset_right = 1116.0
offset_bottom = 534.8
theme = ExtResource("10_wqj76")
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
text = "B"

[node name="Button3" type="Button" parent="QuizUI/Panel"]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.015
anchor_bottom = 0.029
offset_left = 70.0
offset_top = 596.0
offset_right = 526.0
offset_bottom = 718.8
theme = ExtResource("10_wqj76")
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
text = "C"

[node name="Button4" type="Button" parent="QuizUI/Panel"]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.015
anchor_bottom = 0.029
offset_left = 660.0
offset_top = 596.0
offset_right = 1116.0
offset_bottom = 718.8
theme = ExtResource("10_wqj76")
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
text = "D"

[node name="TimerLabel" type="Label" parent="QuizUI/Panel"]
layout_mode = 0
offset_left = 956.0
offset_top = 29.0
offset_right = 1171.0
offset_bottom = 112.0
theme = ExtResource("10_wqj76")
theme_override_colors/font_color = Color(0, 0, 0, 1)
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="Lives" type="Label" parent="QuizUI/Panel"]
layout_mode = 0
offset_left = 72.5
offset_top = 30.0
offset_right = 184.5
offset_bottom = 98.0
theme = ExtResource("2_uwxvg")
theme_override_colors/font_color = Color(0, 0, 0, 1)
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="Heart emoji" type="Sprite2D" parent="QuizUI/Panel"]
position = Vector2(79.5, 67)
texture = ExtResource("3_y7uul")

[node name="Hint" type="Panel" parent="QuizUI/Panel"]
layout_mode = 0
offset_left = 348.0
offset_top = 56.0
offset_right = 848.0
offset_bottom = 556.0
theme_override_styles/panel = ExtResource("9_4guar")

[node name="Label" type="Label" parent="QuizUI/Panel/Hint"]
layout_mode = 0
offset_left = 31.0
offset_top = 32.0
offset_right = 471.0
offset_bottom = 380.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 20
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="Close Hint" type="Button" parent="QuizUI/Panel/Hint"]
layout_mode = 0
offset_left = 150.0
offset_top = 400.0
offset_right = 350.0
offset_bottom = 460.0
text = "Close Hint"

[node name="Hint Button" type="Button" parent="QuizUI/Panel"]
layout_mode = 0
offset_left = 72.0
offset_top = 371.0
offset_right = 172.0
offset_bottom = 402.0
text = "Hint"

[node name="Statistics" type="ScrollContainer" parent="QuizUI/Panel"]
layout_mode = 0
offset_left = 48.0
offset_top = 361.0
offset_right = 1153.0
offset_bottom = 750.0
horizontal_scroll_mode = 0
vertical_scroll_mode = 2

[node name="Stats_Label" type="Label" parent="QuizUI/Panel/Statistics"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 40
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="Exit" type="Button" parent="QuizUI/Panel"]
layout_mode = 0
offset_left = 1056.0
offset_top = 45.0
offset_right = 1156.0
offset_bottom = 105.0
theme_override_styles/normal = ExtResource("6_v0ekv")
text = "Exit"

[node name="Question Timer" type="Timer" parent="QuizUI"]
process_mode = 3

[node name="Global Timer" type="Timer" parent="QuizUI"]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="QuizUI"]
bus = &"SFX"

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="StaticBody2D"]
polygon = PackedVector2Array(1815, 2088, 1815, 1822, 1781, 1815, 1766, 2020, 120, 2015, 111, 1017, 337, 1016, 315, 830, 506, 827, 499, 469, 1038, 467, 1030, 293, 1708, 288, 1721, 636, 1771, 643, 1756, 195, 781, 192, 786, 250, 940, 268, 947, 379, 395, 386, 385, 767, 279, 769, 282, 275, 698, 275, 693, 210, 194, 195, 189, 961, 68, 961, 48, 61, 1900, 51, 1897, -50, -184, -60, -126, 2228, 1834, 2203, 2066, 2203, 2063, 2095)

[node name="CollisionPolygon2D2" type="CollisionPolygon2D" parent="StaticBody2D"]
polygon = PackedVector2Array(1899, 40, 1892, 641, 2253, 632, 2244, 877, 2299, 877, 2300, 380, 2117, 393, 2120, 279, 2810, 274, 2812, 388, 2428, 395, 2414, 868, 2474, 869, 2476, 465, 2873, 461, 2890, 274, 3025, 285, 3070, 239, 3070, 192, 2075, 195, 2069, 459, 2242, 459, 2246, 580, 1941, 580, 1945, 90, 3716, 85, 3732, 768, 3638, 767, 3639, 193, 3222, 200, 3163, 249, 3164, 287, 3522, 297, 3513, 862, 3633, 856, 3647, 820, 3703, 825, 3723, 2002, 3072, 2011, 3074, 1888, 3640, 1892, 3642, 1003, 3490, 1003, 3525, 1208, 3440, 1212, 3447, 390, 3002, 406, 2993, 462, 3359, 469, 3344, 1203, 3148, 1205, 3153, 1446, 3366, 1468, 3366, 1616, 2987, 1607, 2993, 2014, 2073, 2034, 2069, 1883, 2895, 1883, 2892, 1461, 3074, 1457, 3072, 1028, 2971, 1023, 2994, 1408, 2887, 1415, 2887, 773, 2811, 776, 2814, 1211, 2652, 1213, 2659, 645, 3002, 652, 2978, 868, 3075, 871, 3077, 649, 3173, 655, 3148, 1053, 3257, 1054, 3261, 584, 2602, 588, 2582, 1214, 2475, 1219, 2477, 1022, 2237, 1017, 2244, 1204, 1937, 1206, 1938, 973, 1895, 974, 1897, 1259, 2251, 1261, 2253, 1609, 2120, 1612, 2120, 1412, 1757, 1419, 1767, 978, 1718, 980, 1720, 1019, 1585, 1019, 1585, 830, 2076, 840, 2075, 1056, 2120, 1056, 2118, 773, 1589, 775, 1597, 598, 1536, 588, 1533, 1056, 1718, 1067, 1708, 1463, 2080, 1471, 2075, 1607, 1387, 1607, 1367, 1671, 1538, 1674, 1538, 1811, 1183, 1801, 1136, 1865, 1585, 1878, 1599, 1681, 2300, 1673, 2308, 1474, 2429, 1474, 2419, 1822, 2014, 1811, 2012, 2098, 2011, 2229, 3906, 2211, 3898, -81, 1888, -85)

[node name="CollisionPolygon2D3" type="CollisionPolygon2D" parent="StaticBody2D"]
polygon = PackedVector2Array(1425, 630, 1422, 460, 1604, 460, 1590, 388, 1357, 386, 1362, 613, 1380, 632)

[node name="CollisionPolygon2D4" type="CollisionPolygon2D" parent="StaticBody2D"]
polygon = PackedVector2Array(1262, 398, 1255, 772, 1423, 787, 1438, 1212, 1594, 1206, 1598, 1464, 1231, 1474, 1226, 1662, 1142, 1677, 1135, 1422, 1185, 1414, 1186, 1254, 1025, 1262, 1045, 1644, 984, 1670, 858, 1677, 864, 1817, 1049, 1799, 1053, 1829, 995, 1891, 190, 1882, 194, 1193, 341, 1183, 315, 1807, 760, 1809, 770, 1625, 832, 1611, 942, 1611, 948, 1257, 758, 1260, 764, 792, 874, 796, 865, 1211, 1182, 1203, 1180, 981, 1251, 983, 1251, 1410, 1539, 1408, 1535, 1252, 1361, 1258, 1360, 824, 1027, 833, 1035, 1043, 945, 1047, 943, 781, 1181, 767, 1181, 379)

[node name="CollisionPolygon2D5" type="CollisionPolygon2D" parent="StaticBody2D"]
polygon = PackedVector2Array(1075, 610, 1069, 657, 683, 675, 681, 1405, 868, 1398, 871, 1454, 689, 1478, 701, 1639, 600, 1693, 373, 1684, 387, 1020, 573, 1018, 575, 586, 1021, 588)

[node name="Maze Exit" type="Area2D" parent="."]
position = Vector2(1870, 1889)
script = ExtResource("12_wr3jp")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Maze Exit"]
position = Vector2(54, 95)
scale = Vector2(8, 8)
shape = SubResource("RectangleShape2D_jqe11")

[node name="Exit" type="Sprite2D" parent="Maze Exit"]
position = Vector2(49, 113)
scale = Vector2(3.78647, 3.65061)
texture = ExtResource("13_nq7sb")

[node name="Label" type="Label" parent="Maze Exit"]
offset_left = -85.0
offset_top = -149.0
offset_right = 188.0
offset_bottom = -114.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 25
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2
metadata/_edit_use_anchors_ = true

[node name="MazeDialogueTrigger" type="Area2D" parent="."]
scale = Vector2(5, 5)
audio_bus_name = &"Dialogue"
script = ExtResource("13_0iscn")
audio_stream = ExtResource("14_hhu13")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="MazeDialogueTrigger"]
position = Vector2(-37.6, 169.4)
polygon = PackedVector2Array(400.2, 192.4, 441.4, 193, 441, 198.2, 399.4, 196.8)

[node name="MazeDialogueTrigger2" type="Area2D" parent="."]
scale = Vector2(5, 5)
audio_bus_name = &"Dialogue"
script = ExtResource("14_guui5")
audio_stream1 = ExtResource("16_pykaa")
audio_stream2 = ExtResource("17_mah1k")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="MazeDialogueTrigger2"]
position = Vector2(-203.6, 35.6)
polygon = PackedVector2Array(391.4, 96.8, 394.6, 96.8, 396.6, 125.8, 510.4, 122.6, 510.2, 126.8, 392.6, 129.4)

[node name="Maze Quiz" type="Area2D" parent="."]
position = Vector2(443, 1297)
scale = Vector2(5, 5)
audio_bus_name = &"Dialogue"
script = ExtResource("5_neox7")
audio_stream = ExtResource("19_gu3kg")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Maze Quiz"]
position = Vector2(-560, 105.6)
polygon = PackedVector2Array(892.6, -236, 893.2, -209.6, 921.2, -210.2, 922.8, -238.8)

[node name="Sprite2D" type="Sprite2D" parent="Maze Quiz"]
visible = false
position = Vector2(346.951, -118.945)
scale = Vector2(1.08373, 1.11056)
texture = ExtResource("21_bukrh")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="Maze Quiz"]

[connection signal="pressed" from="QuizUI/Panel/Hint/Close Hint" to="QuizUI" method="_on_close_hint_pressed"]
[connection signal="pressed" from="QuizUI/Panel/Hint Button" to="QuizUI" method="_on_hint_button_pressed"]
[connection signal="pressed" from="QuizUI/Panel/Exit" to="QuizUI" method="_on_exit_pressed"]
[connection signal="timeout" from="QuizUI/Question Timer" to="QuizUI" method="_on_timer_timeout"]
[connection signal="mouse_entered" from="Maze Exit" to="Maze Exit" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Maze Exit" to="Maze Exit" method="_on_mouse_exited"]
[connection signal="body_entered" from="MazeDialogueTrigger" to="MazeDialogueTrigger" method="_on_body_entered"]
[connection signal="body_entered" from="MazeDialogueTrigger2" to="MazeDialogueTrigger2" method="_on_body_entered"]
[connection signal="mouse_entered" from="Maze Quiz" to="Maze Quiz" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Maze Quiz" to="Maze Quiz" method="_on_mouse_exited"]
